# DW_HR_Nives

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.airflow/dags/: .airflowignore  etl_transfer_to_stage.py  etl_transfer_to_stage_bkp.py
.dbt/: dbt_project.yml
.dbt/models/: source.yml
.dbt/models/bronze/: bronze_contract_type_info.sql  bronze_employee_info.sql  bronze_ethnicity_info.sql  bronze_gender_info.sql  bronze_hiring_events.sql  bronze_job_info.sql  bronze_pwd_info.sql  bronze_shift_type_info.sql  bronze_termination_reasons.sql  bronze_terminations_events.sql
.dbt/models/gold/: gold_terminated_employees.sql
.dbt/models/silver/: silver_contract_type_info.sql  silver_employee_info.sql  silver_ethnicity_info.sql  silver_gender_info.sql  silver_hiring_events.sql  silver_job_info.sql  silver_pwd_info.sql  silver_shift_type_info.sql  silver_termination_reasons_info.sql  silver_terminations_events.sql
